tests/semantic/fail/loop-index.tiger
for a := 0 to 0 do (
	a := 0
)
